--- a/portfolioblazor/Components/Pages/Home.razor
+++ b/portfolioblazor/Components/Pages/Home.razor
@@ -7,7 +7,20 @@
 @rendermode InteractiveServer
 <PageTitle>Home</PageTitle>
 
+
 <h1 class="text-center">@data?.name</h1>
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 <FetchData />
@@ -38,3 +51,10 @@
         EventManager.OnLanguageChange -= Changed;
     }
 }
+
+<style>
+    body {
+        color: white;
+        background-color: black;
+    }
+</style>
