--- a/portfolioblazor/Components/Layout/Navtop.razor
+++ b/portfolioblazor/Components/Layout/Navtop.razor
@@ -8,7 +8,26 @@
 
 
 
-<div class="top-row-navbar ps-3 navbar navbar-dark d-flex">
+<div class="top-row-navbar ps-3 navbar d-flex">
+    <div>
+
+        <div class="nav-item px-3 navitem">
+            <div style="display:inline-block">
+                <NavLink class="nav-link" href="/" Match="NavLinkMatch.All">
+                    <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true" style="color:black">Home</span>
+                </NavLink>
+            </div>
+            <div class="project-dropdown">
+                <span class="bi bi-house-door-fill-nav-menu pb-5" aria-hidden="true" style="color:black">Project</span>
+                <div class="drop-downcontent">
+                    <p><a href="https://github.com/PELover/DiscordBot" class="text-decoration-none" target="_blank">Discordbot</a></p>
+                    <p><a href="https://github.com/PELover/unity-bhop" class="text-decoration-none" target="_blank">Source Engine's Movement by Unity</a></p>
+                </div>
+            </div>
+        </div>           
+
+    </div>
+
     <div class="ms-auto">
         <button class="btn btn-success me-2" @onclick="ChangeLanguageenglish">EN</button>
         <button class="btn btn-success me-4" @onclick="ChangeLanguagethai">TH</button>
@@ -16,6 +35,7 @@
 </div>
 @code
 {
+    bool isprojectclick = false;
     public void ChangeLanguageenglish()
     {
         JsonLanguage.language = "home_en";
@@ -28,6 +48,29 @@
         EventManager.OnChange();
         StateHasChanged();
     }
+    public void ToggleProjectButton()
+    {
+        isprojectclick = !isprojectclick;        
+    }
 
 }
+<style>
+    .project-dropdown{
+        position:relative;
+        display:inline-block;
+    }
+    .drop-downcontent{
+        position:absolute;
+        display:none;      
+        width:10rem;
+        margin-top:1rem;
+        padding-left:0.5rem;
+        padding-top:0.5rem;
+        background-color:antiquewhite;
+        color:black;
+        border: 2px solid;
+        border-radius: 10px;
+    }
 
+    .project-dropdown:hover .drop-downcontent{display:block;}
+</style>
