update google clone web

--- a/portfolioblazor/Components/Layout/Navtop.razor
+++ b/portfolioblazor/Components/Layout/Navtop.razor
@@ -17,11 +17,13 @@
                     <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true" style="color:black">Home</span>
                 </NavLink>
             </div>
-            <div class="project-dropdown">
+            <div class="project-dropdown ms-3">
                 <span class="bi bi-house-door-fill-nav-menu pb-5" aria-hidden="true" style="color:black">Project</span>
                 <div class="drop-downcontent">
+                    
                     <p><a href="https://github.com/PELover/DiscordBot" class="text-decoration-none" target="_blank">Discordbot</a></p>
                     <p><a href="https://github.com/PELover/unity-bhop" class="text-decoration-none" target="_blank">Source Engine's Movement by Unity</a></p>
+                    <p><a href="https://pelover.github.io/GoogleClone/" class="text-decoration-none" target="_blank">Google Clone</a></p>
                 </div>
             </div>
         </div>           
